--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,13 @@
     "react-debounce-input": "^3.2.0",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
+    "react-responsive-carousel": "^3.1.45",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-slick": "^0.23.2",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
