--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
+    "file-system": "^2.2.2",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.1",
+    "multer": "^1.4.1",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
