--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.4.1",
     "multer": "^1.4.1",
     "react-redux": "^6.0.0",
+    "react-toggle-display": "^2.2.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
