--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
   "homepage": "https://github.com/annaskoulikari/mytinerary#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "file-system": "^2.2.2",
+    "gridfs-stream": "^1.1.1",
+    "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.1",
     "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3",
     "react-redux": "^6.0.0",
     "react-toggle-display": "^2.2.0",
     "redux": "^4.0.1",
