--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "passport-google-oauth2": "^0.1.6",
     "react": "^16.7.0",
     "react-animated-slider": "^1.1.4",
     "react-burger-menu": "^2.5.4",
@@ -11,7 +12,7 @@
     "react-redux": "^6.0.0",
     "react-responsive-carousel": "^3.1.45",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.3",
     "react-slick": "^0.23.2",
     "react-toggle-display": "^2.2.0",
     "redux": "^4.0.1",
