--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "mongoose": "^5.4.1",
     "multer": "^1.4.1",
     "multer-gridfs-storage": "^3.2.3",
+    "passport": "^0.4.0",
+    "passport-google-oauth2": "^0.1.6",
+    "passport-google-oauth20": "^1.0.0",
     "react-redux": "^6.0.0",
     "react-toggle-display": "^2.2.0",
     "redux": "^4.0.1",
