committ before working on socket version of authentication

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "file-system": "^2.2.2",
@@ -37,6 +38,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth2": "^0.1.6",
     "passport-google-oauth20": "^1.0.0",
+    "react": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-toggle-display": "^2.2.0",
     "redux": "^4.0.1",
