--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "passport-google-oauth2": "^0.1.6",
+    "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-animated-slider": "^1.1.4",
     "react-burger-menu": "^2.5.4",
@@ -18,7 +19,8 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
