--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "file-system": "^2.2.2",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.4.0",
@@ -42,7 +43,8 @@
     "react-redux": "^6.0.0",
     "react-toggle-display": "^2.2.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
