--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth2": "^0.1.6",
     "passport-google-oauth20": "^1.0.0",
+    "passport-google-plus-token": "^2.1.0",
     "react": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-toggle-display": "^2.2.0",
