--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "^2.1.3",
     "react-slick": "^0.23.2",
     "react-toggle-display": "^2.2.0",
+    "reactjs-popup": "^1.3.2",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
