--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jquery": "^3.3.1",
+    "materialize-css": "^1.0.0-rc.2",
     "passport-google-oauth2": "^0.1.6",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
@@ -11,6 +13,7 @@
     "react-debounce-input": "^3.2.0",
     "react-dom": "^16.6.3",
     "react-google-login": "^5.0.0",
+    "react-materialize": "^2.6.0",
     "react-redux": "^6.0.0",
     "react-responsive-carousel": "^3.1.45",
     "react-router-dom": "^4.3.1",
