--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "i": "^0.3.6",
     "jquery": "^3.3.1",
-    "materialize-css": "^1.0.0-rc.2",
+    "material-icons": "^0.3.0",
+    "material-icons-react": "^1.0.4",
+    "npm": "^6.8.0",
     "passport-google-oauth2": "^0.1.6",
     "query-string": "^6.2.0",
-    "react": "^16.7.0",
+    "react": "^16.8.1",
     "react-animated-slider": "^1.1.4",
     "react-burger-menu": "^2.5.4",
     "react-debounce-input": "^3.2.0",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.8.1",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.0",
     "react-materialize": "^2.6.0",
     "react-redux": "^6.0.0",
@@ -19,6 +28,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "react-slick": "^0.23.2",
+    "react-swipeable-views": "^0.13.1",
     "react-toggle-display": "^2.2.0",
     "reactjs-popup": "^1.3.2",
     "redux": "^4.0.1",
@@ -33,7 +43,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000/",
+  "proxy": "https://localhost:5000/",
   "eslintConfig": {
     "extends": "react-app"
   },
