--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "multer": "^1.4.1",
     "multer-gridfs-storage": "^3.2.3",
     "passport": "^0.4.0",
+    "passport-facebook-token": "^3.3.0",
     "passport-google-oauth2": "^0.1.6",
     "passport-google-oauth20": "^1.0.0",
     "passport-google-plus-token": "^2.1.0",
