--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,14 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "bootstrap": "^4.3.1",
     "i": "^0.3.6",
     "jquery": "^3.3.1",
     "material-icons": "^0.3.0",
     "material-icons-react": "^1.0.4",
     "npm": "^6.8.0",
     "passport-google-oauth2": "^0.1.6",
+    "popper.js": "^1.14.7",
     "query-string": "^6.2.0",
     "react": "^16.8.1",
     "react-animated-slider": "^1.1.4",
