--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gridfs-stream": "^1.1.1",
     "https": "^1.0.0",
     "jsonwebtoken": "^8.4.0",
+    "method-override": "^3.0.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.1",
     "multer": "^1.4.1",
