commit before deploying to heroku

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "client": "cd client && npm start",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"HTTPS=true npm run server\" \"npm run client\""
+    "dev": "concurrently --kill-others-on-fail \"HTTPS=true npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
+    "heroku": "^7.22.0",
     "https": "^1.0.0",
     "jsonwebtoken": "^8.4.0",
     "method-override": "^3.0.0",
