--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
   "devDependencies": {
     "nodemon": "^1.18.9",
     "redux-devtools-extension": "^2.13.7"
+  },
+  "engines": {
+    "node": "11.10.0"
   }
 }
