--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "bootstrap": "^4.3.1",
+    "history": "^4.7.2",
     "i": "^0.3.6",
     "jquery": "^3.3.1",
     "material-icons": "^0.3.0",
@@ -27,6 +28,7 @@
     "react-materialize": "^2.6.0",
     "react-redux": "^6.0.0",
     "react-responsive-carousel": "^3.1.45",
+    "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "react-slick": "^0.23.2",
