cleaned up server.js file and package.json - code refactor

--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "file-system": "^2.2.2",
-    "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
     "heroku": "^7.22.0",
     "https": "^1.0.0",
@@ -43,16 +41,12 @@
     "multer-gridfs-storage": "^3.2.3",
     "passport": "^0.4.0",
     "passport-facebook-token": "^3.3.0",
-    "passport-google-oauth2": "^0.1.6",
-    "passport-google-oauth20": "^1.0.0",
     "passport-google-plus-token": "^2.1.0",
     "path": "^0.12.7",
     "react": "^16.7.0",
     "react-redux": "^6.0.0",
-    "react-toggle-display": "^2.2.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "socket.io": "^2.2.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
