final cleanup for package.json both in client and in server - refactor

--- a/package.json
+++ b/package.json
@@ -43,10 +43,7 @@
     "passport-facebook-token": "^3.3.0",
     "passport-google-plus-token": "^2.1.0",
     "path": "^0.12.7",
-    "react": "^16.7.0",
-    "react-redux": "^6.0.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "react": "^16.7.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
