--- a/client/package.json
+++ b/client/package.json
@@ -15,31 +15,20 @@
     "material-icons": "^0.3.0",
     "material-icons-react": "^1.0.4",
     "npm": "^6.8.0",
-    "passport-google-oauth2": "^0.1.6",
-    "popper.js": "^1.14.7",
-    "query-string": "^6.2.0",
     "react": "^16.8.1",
     "react-animated-slider": "^1.1.4",
-    "react-burger-menu": "^2.5.4",
     "react-debounce-input": "^3.2.0",
     "react-dom": "^16.8.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.0",
-    "react-materialize": "^2.6.0",
     "react-redux": "^6.0.0",
-    "react-responsive-carousel": "^3.1.45",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
-    "react-slick": "^0.23.2",
     "react-swipeable-views": "^0.13.1",
-    "react-toggle-display": "^2.2.0",
-    "reactjs-popup": "^1.3.2",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "slick-carousel": "^1.8.1",
-    "socket.io-client": "^2.2.0"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
